// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. multiple ad slots 1`] = `
<style>
.IS1 {
  height: auto;
  overflow: hidden;
  width: 970;
}

.IS2 {
  align-items: center;
  flex: 1;
}

.IS3 {
  height: auto;
  overflow: hidden;
  width: 1;
}

.IS4 {
  align-items: center;
  flex: 1;
}

.IS5 {
  height: auto;
  overflow: hidden;
  width: 970;
}

.IS6 {
  align-items: center;
  flex: 1;
}
</style>

<AdComposer>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="header"
  >
    <MockServerClientRender
      server={null}
    >
      <View
        className="IS2"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0"
        >
          <DOMContext
            baseUrl="https://www.thetimes.co.uk/"
            height={250}
            width={970}
          >
            <div
              className="IS1"
            />
          </DOMContext>
        </div>
      </View>
    </MockServerClientRender>
  </Ad>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="pixel"
  >
    <MockServerClientRender
      server={null}
    >
      <View
        className="IS4"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0"
        >
          <DOMContext
            baseUrl="https://www.thetimes.co.uk/"
            height={1}
            width={1}
          >
            <div
              className="IS3"
            />
          </DOMContext>
        </div>
      </View>
    </MockServerClientRender>
  </Ad>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="intervention"
  >
    <MockServerClientRender
      server={null}
    >
      <View
        className="IS6"
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0"
        >
          <DOMContext
            baseUrl="https://www.thetimes.co.uk/"
            height={250}
            width={970}
          >
            <div
              className="IS5"
            />
          </DOMContext>
        </div>
      </View>
    </MockServerClientRender>
  </Ad>
</AdComposer>
`;

exports[`2. placeholder when isloading 1`] = `
<style>
.IS1 {
  left: 0;
  position: absolute;
  top: 0;
}

.IS2 {
  background-color: #F9F9F9;
  border-color: #DBDBDB;
  border-style: solid;
  border-width: 1;
  color: #696969;
  font-family: TimesDigitalW04;
  font-size: 11;
  line-height: 15;
  letter-spacing: 1.5;
  padding-bottom: 5px;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  z-index: 1;
}

.IS3 {
  height: 250px;
  width: 970px;
}

.IS4 {
  align-items: center;
  background-color: #F9F9F9;
  border-color: #DBDBDB;
  border-style: solid;
  border-width: 1;
  justify-content: center;
  overflow: hidden;
  height: 250;
  width: 970;
}

.IS5 {
  align-items: center;
  flex: 1;
  justify-content: center;
}

.IS6 {
  flex: 1;
}

.IS7 {
  align-items: center;
  flex: 1;
}
</style>

<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={true}
  section="news"
  slotName="header"
>
  <MockServerClientRender
    server={null}
  >
    <View
      className="IS7"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0"
      >
        <AdPlaceholder
          className="IS6"
          height={250}
          width={970}
        >
          <View
            className="IS5"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-justifyContent-1777fci"
            >
              <View
                className="IS4"
                testID="ad-placeholder"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-gbtiil r-borderColor-1kv57cf r-borderStyle-1phboty r-borderWidth-rs99b7 r-justifyContent-1777fci r-overflow-1udh08x IS3"
                  data-testid="ad-placeholder"
                >
                  <View
                    className="IS1"
                  >
                    <div
                      className="css-view-1dbjc4n r-left-1d2f490 r-position-u8s1d r-top-ipm5af"
                    >
                      <Watermark
                        height={250}
                        viewBox="-630 120 1200 50"
                        width={970}
                      />
                    </div>
                  </View>
                  <Text
                    className="IS2"
                  >
                    <div
                      className="css-text-901oao r-backgroundColor-gbtiil r-borderColor-1kv57cf r-borderStyle-1phboty r-borderWidth-rs99b7 r-color-1khp51w r-fontFamily-1feecvn r-fontSize-1gkfh8e r-letterSpacing-i933xg r-lineHeight-fxxt2n r-paddingBottom-1inuy60 r-paddingLeft-1hfyk0a r-paddingRight-1qfoi16 r-paddingTop-glunga r-zIndex-184en5c"
                    >
                      ADVERTISEMENT
                    </div>
                  </Text>
                </div>
              </View>
            </div>
          </View>
        </AdPlaceholder>
      </div>
    </View>
  </MockServerClientRender>
</Ad>
`;

exports[`3. nothing if there is an error in the loading of scripts 1`] = `
<style>
.IS1 {
  height: auto;
  overflow: hidden;
  width: 0;
}

.IS2 {
  left: 0;
  position: absolute;
  top: 0;
}

.IS3 {
  background-color: #F9F9F9;
  border-color: #DBDBDB;
  border-style: solid;
  border-width: 1;
  color: #696969;
  font-family: TimesDigitalW04;
  font-size: 11;
  line-height: 15;
  letter-spacing: 1.5;
  padding-bottom: 5px;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  z-index: 1;
}

.IS4 {
  height: 250px;
  width: 970px;
}

.IS5 {
  align-items: center;
  background-color: #F9F9F9;
  border-color: #DBDBDB;
  border-style: solid;
  border-width: 1;
  justify-content: center;
  overflow: hidden;
  height: 250;
  width: 970;
}

.IS6 {
  align-items: center;
  flex: 1;
  justify-content: center;
}

.IS7 {
  flex: 1;
}

.IS8 {
  align-items: center;
  flex: 1;
}
</style>

<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={false}
  section="news"
  slotName="header"
>
  <MockServerClientRender
    server={null}
  >
    <View
      className="IS8"
    >
      <div
        className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0"
      >
        <DOMContext
          baseUrl="https://www.thetimes.co.uk/"
          height={0}
          width={0}
        >
          <div
            className="IS1"
          />
        </DOMContext>
        <AdPlaceholder
          className="IS7"
          height={250}
          width={970}
        >
          <View
            className="IS6"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-justifyContent-1777fci"
            >
              <View
                className="IS5"
                testID="ad-placeholder"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-backgroundColor-gbtiil r-borderColor-1kv57cf r-borderStyle-1phboty r-borderWidth-rs99b7 r-justifyContent-1777fci r-overflow-1udh08x IS4"
                  data-testid="ad-placeholder"
                >
                  <View
                    className="IS2"
                  >
                    <div
                      className="css-view-1dbjc4n r-left-1d2f490 r-position-u8s1d r-top-ipm5af"
                    >
                      <Watermark
                        height={250}
                        viewBox="-630 120 1200 50"
                        width={970}
                      />
                    </div>
                  </View>
                  <Text
                    className="IS3"
                  >
                    <div
                      className="css-text-901oao r-backgroundColor-gbtiil r-borderColor-1kv57cf r-borderStyle-1phboty r-borderWidth-rs99b7 r-color-1khp51w r-fontFamily-1feecvn r-fontSize-1gkfh8e r-letterSpacing-i933xg r-lineHeight-fxxt2n r-paddingBottom-1inuy60 r-paddingLeft-1hfyk0a r-paddingRight-1qfoi16 r-paddingTop-glunga r-zIndex-184en5c"
                    >
                      ADVERTISEMENT
                    </div>
                  </Text>
                </div>
              </View>
            </div>
          </View>
        </AdPlaceholder>
      </div>
    </View>
  </MockServerClientRender>
</Ad>
`;

exports[`4. returns nothing if user has adblock 1`] = `
<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={false}
  section="news"
  slotName="header"
/>
`;
